Q/A Team Bug Patches (#15)
* [Bug Patch] Header Responsiveness, Safari Hangs
- Fixed title overlapping with board when switching between mobile & desktop viewports
- Fixed game hanging in the Safari Browser when audio gets spammed by rapid inputs

* [Feature] Undo history functionality, modal feature change
- Fixed Modal closing when clicking outside the modal (intended feature but removed nonetheless)
 - Added undo to any move functionality

* [Bug Patch] Select undo History functionality
- when selecting a point in time the playerMove hook was returning the wrong player

* [Bug Patch] button color difference on Safari vs Chrome

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -20,6 +20,7 @@
   border: 2px solid #2c3e50;
   height: fit-content;
   width: 5.5rem;
+  background-color: #fff;
 }
 
 .game_header_button:hover {
@@ -53,6 +54,33 @@
   background-color: #34495e;
   border: 10px solid #2c3e50;
   border-radius: 10px;
+  color: #fff;
+}
+
+.undoHistory_dom_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.3rem;
+}
+
+.pick_undo_button {
+  display: flex;
+  justify-content: space-between;
+  margin: 0rem 0.2rem 0rem 0.2rem;
+  padding: 0.2rem;
+  width: 1rem;
+  border: 1px solid black;
+  color: black;
+  background-color: #fff;
+}
+
+.pick_undo_button:hover {
+  box-shadow: 0px 2px 10px 5px #9bb3ce;
+  transition: 0.5s ease;
+}
+
+.message {
   color: #fff;
 }
 
@@ -93,7 +121,7 @@
 }
 
 /* Mobile-Device viewport */
-@media (min-width: 100px) and (max-width: 619px) {
+@media (min-width: 100px) and (max-width: 777px) {
   .game_header {
     padding-top: 6rem;
   }
